fixed issue of extra spacing
in the footer, links to other pages

--- a/style.css
+++ b/style.css
@@ -347,7 +347,7 @@ li.current:after {
   text-align: match-parent;
   unicode-bidi: isolate;
   font-variant-numeric: tabular-nums;
-  white-space: pre;
+  /* white-space: pre; */
   text-transform: none;
 }
 
